Create main level and add input to paddle

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,13 +2,16 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Level1.Level1
 GameDefaultMap=/Game/Level1.Level1
-GlobalDefaultGameMode="/Script/Pong.PongGameMode"
+GlobalDefaultGameMode=/Game/Blueprints/PongGameMode_BP.PongGameMode_BP_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.MotionBlur=False
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -51,6 +54,4 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 
-[/Script/Engine.RendererSettings]
-r.DefaultFeature.MotionBlur=False
 
