--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,5 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=9497393D40B98B4239605C9536D7A79D
+ProjectName=Pong
 
 [StartupActions]
 bAddPacks=True
